#27 add gamification
